--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,9 +1,14 @@
-@import '../../styles/mixins';
-@import '../../styles/theme';
+@import 'src/styles/mixins';
+@import 'src/styles/theme';
 
 .header {
-  @include flex(row, space-between, center);
-  padding: 8px 16px;
+  @include flex;
+  column-gap: 2rem;
+  padding: 8px 40px 8px 26px;
   background-color: $color-dark-secondary;
   box-shadow: $color-dark-secondary 0 1px 10px 5px;
+}
+
+.spacer {
+  margin-left: auto;
 }
