--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,25 +1,33 @@
 // Основные цвета
-$color-dark-primary: #0D1117; // Очень темный серо-синий, почти черный, для фона
-$color-dark-secondary: #161B22; // Темно-серый для элементов фона и карточек
-$color-dark-tertiary: #21262D; // Средне-темный серый для фона панелей и модальных окон
+$color-dark-primary: #0d1117; // Очень темный серо-синий, почти черный, для фона
+$color-dark-secondary: #161b22; // Темно-серый для элементов фона и карточек
+$color-dark-tertiary: #21262d; // Средне-темный серый для фона панелей и модальных окон
 
 // Акцентные цвета
-$color-accent-primary: #8D3B72; // Темно-бордовый, для акцентных кнопок и ссылок
-$color-accent-secondary: #5865F2; // Ярко-синий, для подсветки важных элементов
-$color-accent-tertiary: #FFA657; // Оранжевый, для подсветки важных элементов
+$color-accent-primary: #8d3b72; // Темно-бордовый, для акцентных кнопок и ссылок
+$color-accent-secondary: #5865f2; // Ярко-синий, для подсветки важных элементов
+$color-accent-tertiary: #ffa657; // Оранжевый, для подсветки важных элементов
 
 // Цвета текста
-$color-text-primary: #C9D1D9; // Светло-серый для основного текста
-$color-text-secondary: #8B949E; // Темно-серый для второстепенного текста
-$color-text-tertiary: #FFFFFF; // Белый для заголовков и важного текста
+$color-text-primary: #c9d1d9; // Светло-серый для основного текста
+$color-text-secondary: #8b949e; // Темно-серый для второстепенного текста
+$color-text-tertiary: #ffffff; // Белый для заголовков и важного текста
 
 // Дополнительные цвета
-$color-error: #F85149; // Красный для ошибок и предупреждений
-$color-success: #2EA043; // Зеленый для успеха и подтверждений
-$color-info: #58A6FF; // Синий для информационных сообщений
+$color-error: #f85149; // Красный для ошибок и предупреждений
+$color-success: #2ea043; // Зеленый для успеха и подтверждений
+$color-info: #58a6ff; // Синий для информационных сообщений
 
 // Прозрачность и оверлеи
-$overlay-color: rgba($color-dark-primary, 0.85); // Темный оверлей для модальных окон
+$overlay-color: rgba(
+  $color-dark-primary,
+  0.85
+); // Темный оверлей для модальных окон
 
 // Границы и разделители
-$border-color: #30363D; // Цвет границ и разделителей
+$border-color: #30363d; // Цвет границ и разделителей
+
+// Тени
+$color-shadow: #c9d1d9; // Цвет теней
+$shadow: 0 0 4px 0 $color-shadow; // Тень для элементов
+$shadow-hover: 0 0 15px 0 $color-shadow; // Тень для элементов при наведении
