--- a/src/layouts/layout.module.scss
+++ b/src/layouts/layout.module.scss
@@ -1,6 +1,7 @@
 .rootContainer {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
   width: 100%;
+  height: 100dvh;
+  max-height: 100dvh;
 }
