--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -26,6 +26,7 @@ $overlay-color: rgba(
 
 // Границы и разделители
 $border-color: #30363d; // Цвет границ и разделителей
+$border-radius: 0.5rem; // Радиус скругления углов
 
 // Тени
 $color-shadow: #c9d1d9; // Цвет теней
