--- a/src/UI/Button/Button.module.scss
+++ b/src/UI/Button/Button.module.scss
@@ -1,10 +1,10 @@
-@import 'src/styles/theme.scss';
+@import "src/styles/theme";
 
 .button {
-  padding: 0.8rem 1.6rem;
+  display: block;
   font-weight: bold;
   text-align: center;
-  border-radius: 4px;
+  border-radius: $border-radius;
   transition:
     background-color 0.3s,
     opacity 0.3s;
@@ -56,5 +56,21 @@
 
   &.uppercase {
     text-transform: uppercase;
+  }
+
+  &.rounded {
+    &.small {
+      padding: 0.4rem;
+    }
+
+    &.medium {
+      padding: 0.8rem;
+    }
+
+    &.large {
+      padding: 1rem;
+    }
+
+    border-radius: 50%;
   }
 }
