--- a/src/components/GameVideo/GameVideo.module.scss
+++ b/src/components/GameVideo/GameVideo.module.scss
@@ -1,18 +1,27 @@
 @import "src/styles/theme.scss";
+@import "src/styles/mixins.scss";
 
 .container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid $border-color;
-  border-radius: 5px;
-  box-shadow: $shadow;
-  aspect-ratio: 2/1;
+  @include flex(row, center, center);
+  border-radius: $border-radius;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
+  &.active {
+    grid-column: 2 / 5;
+    grid-row: 1 / 3;
+
+    & > .video {
+      width: 100%;
+      height: auto;
+    }
+  }
 }
 
 .myVideoContainer {
   position: fixed;
-  bottom: 3rem;
+  top: 6rem;
   right: 2rem;
   width: 200px;
   height: 150px;
@@ -25,9 +34,9 @@
 }
 
 .video {
-  width: 100%;
   height: 100%;
   object-fit: contain;
+  transform: scaleX(-1);
 }
 
 .loaderContainer {
