--- a/src/components/UserModal/UserModal.module.scss
+++ b/src/components/UserModal/UserModal.module.scss
@@ -1,13 +1,15 @@
+@import "src/styles/mixins";
+@import "src/styles/theme";
+
 .userModal {
+  @include flexCenter;
+
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
 
   z-index: 1000;
@@ -22,23 +24,23 @@
 }
 
 .userContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  @include flex(column);
+  @include customScrollbar;
+
   padding: 2em;
   border-radius: 1em;
   background-color: lightgrey;
   width: 50%;
+  max-height: 80vh;
+
+  overflow-y: auto;
 }
 
 .userCard {
+  @include flex(column);
+
   width: 80%;
   color: black;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
   padding: 1em;
   margin: 1em 0;
   border-radius: 1em;
