--- a/src/layouts/layout.module.scss
+++ b/src/layouts/layout.module.scss
@@ -2,6 +2,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100dvh;
-  max-height: 100dvh;
+  height: 100vh;
+  max-height: 100vh;
 }
