--- a/src/UI/Button/Button.module.scss
+++ b/src/UI/Button/Button.module.scss
@@ -52,6 +52,17 @@
       opacity: 0.5;
       cursor: not-allowed;
     }
+
+    &.tertiary {
+      background-color: transparent;
+      color: inherit;
+
+      &:disabled {
+        background-color: $color-accent-tertiary;
+        opacity: 0.5;
+        cursor: not-allowed;
+      }
+    }
   }
 
   &.uppercase {
