--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -37,6 +37,7 @@
   border-radius: 1em;
   background-color: #f5f5f5;
   box-shadow: 0 0 1em #00000022;
+  margin-top: 2rem;
 }
 
 .messageText {
@@ -45,12 +46,14 @@
   text-align: start;
   justify-content: center;
   flex-direction: column;
+  word-break: break-all;
   max-width: 50%;
   padding: 1em;
   border-radius: 1em;
   background-color: #ffffff;
   box-shadow: 0 0 1em #00000022;
   color: black;
+  margin-bottom: 1rem;
 }
 
 .messageText.myMessage {
