--- a/src/components/GameVideo/GameVideo.module.scss
+++ b/src/components/GameVideo/GameVideo.module.scss
@@ -2,7 +2,8 @@
 @import "src/styles/mixins.scss";
 
 .container {
-  @include flex(row, center, center);
+  @include flex(center, center);
+  position: relative;
   border-radius: $border-radius;
   width: 100%;
   height: 100%;
@@ -11,11 +12,6 @@
   &.active {
     grid-column: 2 / 5;
     grid-row: 1 / 3;
-
-    & > .video {
-      width: 100%;
-      height: auto;
-    }
   }
 }
 
@@ -34,7 +30,51 @@
 }
 
 .video {
-  height: 100%;
   object-fit: contain;
   transform: scaleX(-1);
+
+  &.widthProportion {
+    width: 100%;
+    height: auto;
+  }
+
+  &.heightProportion {
+    width: auto;
+    height: 100%;
+  }
+}
+
+.userInfo {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.menu {
+  @include flex(center, center);
+  column-gap: 2px;
+  position: absolute;
+  width: 40px;
+  top: 10px;
+  right: 5px;
+  z-index: 10;
+
+  cursor: pointer;
+
+  > .dot {
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background-color: $color-accent-primary;
+  }
+}
+
+.gmLabel {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 10;
+
+  color: $color-accent-tertiary;
 }
