- fix video blinking - fix video sizes - fix roles - fix players in game

--- a/src/components/GameInfoSection/GameInfoSection.module.scss
+++ b/src/components/GameInfoSection/GameInfoSection.module.scss
@@ -18,8 +18,10 @@
 
 .buttonContainer {
   @include flexCenter;
+  min-width: 50%;
   width: 100%;
   height: 100%;
+  flex-grow: 2;
 }
 
 .roles {
@@ -52,4 +54,9 @@
   }
 
   transition: color 0.3s;
+}
+
+.gmPanel {
+  @include flex;
+  column-gap: 2rem;
 }
