--- a/src/components/GameInfoSection/GameInfoSection.module.scss
+++ b/src/components/GameInfoSection/GameInfoSection.module.scss
@@ -2,12 +2,10 @@
 @import "src/styles/mixins";
 
 .list {
-  display: flex;
+  @include flexCenter;
   flex-wrap: wrap;
   column-gap: 0.8rem;
   font-size: 1.5rem;
-
-  margin-bottom: 10px;
 }
 
 .container {
@@ -58,5 +56,21 @@
 
 .gmPanel {
   @include flex;
+  width: 100%;
+  height: 100%;
+  position: relative;
   column-gap: 2rem;
+}
+
+.userRolesTippy {
+  @include flexCenter;
+  column-gap: 0.7rem;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 0.5rem;
+  width: max-content;
+  font-size: 1.2rem;
+
+  cursor: pointer;
 }
