--- a/src/components/GameInfoSection/GmPanel/GmPanel.module.scss
+++ b/src/components/GameInfoSection/GmPanel/GmPanel.module.scss
@@ -1,10 +1,12 @@
 @import "src/styles/mixins";
 
 .gmPanel {
-  @include flexCenter;
+  @include flexCenter(column);
   width: 100%;
   height: 100%;
   column-gap: 2rem;
+
+  position: relative;
 }
 
 .initialPanelContainer {
@@ -12,4 +14,35 @@
   min-width: 50%;
   width: 100%;
   height: 100%;
+}
+
+.dayNightPanelContainer {
+  @include flex;
+  column-gap: 2rem;
+  min-width: 50%;
+  width: 100%;
+
+  margin-bottom: 1rem;
+}
+
+.restart {
+  position: absolute;
+  top: 1rem;
+  right: 0;
+  font-size: 1rem;
+
+  cursor: pointer;
+}
+
+.nightContainer {
+  @include flex(row, flex-start);
+  width: 100%;
+  column-gap: 1rem;
+  font-size: 1.5rem;
+}
+
+.radioLabel {
+  @include flexCenter;
+  column-gap: 0.5rem;
+  cursor: pointer;
 }
