--- a/src/components/GameVideo/GameVideo.module.scss
+++ b/src/components/GameVideo/GameVideo.module.scss
@@ -79,7 +79,7 @@
   right: 10px;
   z-index: 10;
 
-  color: $color-accent-tertiary;
+  color: $color-accent-secondary;
 }
 
 .statusIconsContainer {
