--- a/src/components/GameVideo/GameVideo.module.scss
+++ b/src/components/GameVideo/GameVideo.module.scss
@@ -26,6 +26,10 @@
   z-index: 99;
   cursor: grab;
 
+  & .userInfo {
+    display: none;
+  }
+
   &.myVideoActive {
     display: block;
   }
@@ -52,13 +56,21 @@
 
 .userInfo {
   @include flex(row, flex-start, center);
+  width: max-content;
   column-gap: 1.5rem;
   position: absolute;
   left: 0;
   right: 0;
   bottom: 0;
-  padding-left: 2rem;
-  padding-bottom: 0.5rem;
+  padding: 0.5rem;
+
+  color: $color-text-tertiary;
+  margin-left: 1rem;
+  margin-bottom: 1rem;
+  border-radius: $border-radius;
+  background-color: rgba($color-dark-primary, 50%);
+
+  z-index: 10;
 }
 
 .menu {
@@ -106,6 +118,21 @@
   position: absolute;
   top: 5px;
   left: 5px;
+
+  z-index: 10;
+}
+
+.voteList {
+  @include flex(column, flex-start, flex-start);
+  column-gap: 1rem;
+  position: absolute;
+  top: 60px;
+  left: 5px;
+  padding: 0.5rem;
+  background-color: rgba($color-dark-primary, 50%);
+  border-radius: $border-radius;
+  color: $color-text-tertiary;
+  font-size: 1.4rem;
 
   z-index: 10;
 }
