- implemented vote flow - add draw option - add one proposed option - add auto vote if you miss time - add calculations for selected user by voting - add 'kill' to user menu - add modals to project - add logic for modals management - add modals store

--- a/src/components/GameVideo/GameVideo.module.scss
+++ b/src/components/GameVideo/GameVideo.module.scss
@@ -18,7 +18,7 @@
 .myVideoContainer {
   display: none;
   position: fixed;
-  bottom: 70%;
+  top: 28%;
   right: 2rem;
   width: 200px;
   height: 150px;
@@ -112,4 +112,14 @@
 
 .statusDisabled {
   color: $color-error;
+}
+
+.deadOverlay {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  color: $color-error;
+
+  font-weight: 600;
+  z-index: 10;
 }
