--- a/src/components/GameInfoSection/GmPanel/GmPanel.module.scss
+++ b/src/components/GameInfoSection/GmPanel/GmPanel.module.scss
@@ -36,7 +36,7 @@
 
 .nightContainer,
 .dayContainer {
-  @include flex(row, space-around, flex-end);
+  @include flex(row, space-around, center);
   width: 100%;
   column-gap: 1rem;
   font-size: 1.5rem;
