--- a/src/components/GameInfoSection/GmPanel/GmPanel.module.scss
+++ b/src/components/GameInfoSection/GmPanel/GmPanel.module.scss
@@ -36,10 +36,13 @@
 
 .nightContainer,
 .dayContainer {
-  @include flex(row, space-around, center);
+  @include flex(row, space-around, flex-start);
+  flex-wrap: wrap;
+
   width: 100%;
-  column-gap: 1rem;
   font-size: 1.5rem;
+
+  overflow: auto;
 }
 
 .radioLabel {
