- done with custom bg

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -2,6 +2,9 @@
 $color-dark-primary: #0d1117; // Очень темный серо-синий, почти черный, для фона
 $color-dark-secondary: #161b22; // Темно-серый для элементов фона и карточек
 $color-dark-tertiary: #21262d; // Средне-темный серый для фона панелей и модальных окон
+$color-light-primary: #f0f6fc; // Светло-серый для текста и элементов интерфейса
+$color-light-secondary: #c9d1d9; // Светло-серый для текста и элементов интерфейса
+$color-light-tertiary: #8b949e; // Серый для текста и элементов интерфейса
 
 // Акцентные цвета
 $color-accent-primary: #8d3b72; // Темно-бордовый, для акцентных кнопок и ссылок
