--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,23 +1,23 @@
 // Основные цвета
-$color-dark-primary: #0d1117; // Очень темный серо-синий, почти черный, для фона
+$color-dark-primary: #212121; // Очень темный серо-синий, почти черный, для фона
 $color-dark-secondary: #161b22; // Темно-серый для элементов фона и карточек
 $color-dark-tertiary: #21262d; // Средне-темный серый для фона панелей и модальных окон
-$color-light-primary: #f0f6fc; // Светло-серый для текста и элементов интерфейса
-$color-light-secondary: #c9d1d9; // Светло-серый для текста и элементов интерфейса
+$color-light-primary: #f5f5f5; // Светло-серый для текста и элементов интерфейса
+$color-light-secondary: #cfcfcf; // Светло-серый для текста и элементов интерфейса
 $color-light-tertiary: #8b949e; // Серый для текста и элементов интерфейса
 
 // Акцентные цвета
-$color-accent-primary: #8d3b72; // Темно-бордовый, для акцентных кнопок и ссылок
+$color-accent-primary: #fff72f; // Темно-бордовый, для акцентных кнопок и ссылок
 $color-accent-secondary: #5865f2; // Ярко-синий, для подсветки важных элементов
 $color-accent-tertiary: #ffa657; // Оранжевый, для подсветки важных элементов
 
 // Цвета текста
-$color-text-primary: #c9d1d9; // Светло-серый для основного текста
+$color-text-primary: #f0f0f0; // Светло-серый для основного текста
 $color-text-secondary: #8b949e; // Темно-серый для второстепенного текста
 $color-text-tertiary: #ffffff; // Белый для заголовков и важного текста
 
 // Дополнительные цвета
-$color-error: #f85149; // Красный для ошибок и предупреждений
+$color-error: #ff0000; // Красный для ошибок и предупреждений
 $color-success: #2ea043; // Зеленый для успеха и подтверждений
 $color-info: #58a6ff; // Синий для информационных сообщений
 
@@ -28,8 +28,9 @@ $overlay-color: rgba(
 ); // Темный оверлей для модальных окон
 
 // Границы и разделители
-$border-color: #30363d; // Цвет границ и разделителей
+$border-color: #f5f5f5; // Цвет границ и разделителей
 $border-radius: 0.5rem; // Радиус скругления углов
+$border-radius-big: 3rem; // Радиус скругления углов для круглых элементов
 
 // Тени
 $color-shadow: #c9d1d9; // Цвет теней
