--- a/src/components/LanguageSwitcher/LanguageSwitcher.module.scss
+++ b/src/components/LanguageSwitcher/LanguageSwitcher.module.scss
@@ -1,5 +1,5 @@
-@import 'src/styles/mixins.scss';
-@import 'src/styles/theme.scss';
+@import "src/styles/mixins.scss";
+@import "src/styles/theme.scss";
 
 .container {
   @include flex;
