--- a/src/components/SingUpForm/SingUpForm.module.scss
+++ b/src/components/SingUpForm/SingUpForm.module.scss
@@ -7,13 +7,7 @@
 }
 
 .form {
-  @include flex(column, center, center);
-  max-width: 500px;
-  row-gap: 1rem;
-  padding: 1.5rem;
-  border-radius: $border-radius;
-  background-color: $color-dark-secondary;
-  box-shadow: $shadow;
+  width: 450px;
 }
 
 .singUpLink {
@@ -26,4 +20,14 @@
     color: $color-accent-primary;
     text-decoration: underline;
   }
+}
+
+.formFooter {
+  @include flexCenter;
+  gap: 4rem;
+
+  width: 100%;
+  margin-top: 1.5rem;
+  padding: 0 25px;
+  font-size: 1.8rem;
 }
