--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,10 +1,10 @@
-@import "theme";
+@import "common";
 
 @import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Poppins:wght@300;400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap");
 
 :root {
-  font-family: "Cinzel", "Poppins", sans-serif, Inter, system-ui, Avenir,
-    Helvetica, Arial, sans-serif;
+  font-family: "Poppins", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   font-size: 10px;
@@ -20,6 +20,7 @@
 }
 
 body {
+  font-family: "Poppins", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   margin: 0;
   min-width: 320px;
   height: 100vh;
@@ -32,10 +33,6 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-h1 {
-  font-size: 3.2em;
 }
 
 button {
